refactor TwoFactorAuth component to remove unused navigate import